--- a/src/pages/recipe/[recipe].astro
+++ b/src/pages/recipe/[recipe].astro
@@ -29,8 +29,23 @@ async function getRecipes() {
   }
 }
 
-const recipes = await getRecipes();
+async function getIngredients(){
+  try {
+   
+    const { rows: recipeRows } = await turso.execute(`SELECT i.*, d.quantity FROM recipe_ingredient d INNER JOIN ingredient i ON d.id_ingredient = i.id WHERE d.id_recipe =  ${recipe}`);
+ 
+    return recipeRows;
+  } catch (error) {
+    console.error('Error fetching recipes:', error);
+    return []; // Handle error gracefully, e.g., return an empty array
+  }
 
+} 
+
+const recipes = await getRecipes();
+const ingredient = await getIngredients();
+console.log(ingredient)
+console.log(recipes)
 ---
  <Navbar />
 
@@ -51,10 +66,31 @@ const recipes = await getRecipes();
  </div>
 </section>
 
+<section class="text-gray-600 body-font ">
+  <div class="container px-5 py-12 mx-auto flex flex-wrap flex-col items-center">
+    <h2 class="text-3xl font-medium title-font mb-4 text-gray-900">Ingredientes</h2>
+    <ul class="grid grid-cols-2 gap-4 list-none text-lg text-gray-700 mb-6">
+      {ingredient.map((post) => (
+        <li class="flex items-center p-4">
+          <img class="w-14 h-14 mr-2" src=`${post.repImage}` alt=""> <!-- Ajusta el tamaño a 50x50px -->
+          <span>{post.quantity} { post.name }</span>
+        </li>
+        ))}
+    </ul>
 
-<div class="m-10" set:html={recipes[0].step}></div>
+
+    <h2 class="text-3xl font-medium title-font mb-4 text-gray-900">Instrucciones</h2>
+    <div class="m-10" set:html={recipes[0].step}></div>
 
 
+    <div class="text-center w-full mt-4">
+      <p class="lg:w-2/3 mx-auto leading-relaxed text-base">&#161;Disfruta de tu deliciosa receta&#33;</p>
+    </div>
+  </div>
+</section>
+
+
+ 
 
 
 
