--- a/src/pages/type/[type].astro
+++ b/src/pages/type/[type].astro
@@ -1,4 +1,5 @@
 ---
+import Layout from '../../layouts/Layout.astro';
 export function getStaticPaths() {
   return [
     {params: {type: 'Desayunos'}},
@@ -41,15 +42,14 @@ async function getRecipes() {
 const recipes = await getRecipes();
 
 ---
- <Navbar />
-
+<Layout title="Welcome to Astro.">
  
  <section class="text-gray-600 body-font">
   <div class="container px-5 py-24 mx-auto">
     {recipes.map((recipe) => (
       <div class="flex items-center lg:w-4/5 mx-auto border-b pb-10 mb-10 border-gray-200 sm:flex-row flex-col">
         <div class="flex-grow sm:text-left text-center mt-6 sm:mt-0">
-          <h2 class="text-gray-900 text-lg title-font font-medium mb-2">{recipe.name}</h2>
+          <h2 class="text-gray-900 title-font font-medium mb-2 font-serif text-3xl">{recipe.name}</h2>
           <a href={`/recipe/${recipe.id}`} class="mt-3 text-lime-700 inline-flex items-center">
             <span>Ver receta completa</span>
             <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
@@ -61,3 +61,5 @@ const recipes = await getRecipes();
     ))}
   </div>
 </section>
+
+</Layout>
